<resources>
    <string name="app_name">Chip It Safe</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_heart_rate">HeartRateActivity</string>
    <string name="scan_button_text">Start Scan</string>
    <string name="skip_scan_button_text">Skip scan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">in.danger@email.it</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--- End of login strings -->

    <!-- Notifications -->
    <string name="channel_name">dangerToDoctor</string>
    <string name="channel_description">danger to doctor channel decr</string>

    <!-- Emergency question -->
    <string name="emergency_questions_first_time">Is the first time it happens?</string>
    <string name="emergency_questions_chest">Do you feel chest pain or a sense of oppression?</string>
    <string name="emergency_questions_faint">Do you feel faint?</string>
    <string name="emergency_questions_medicine">Do you usually take medicine for this problem?</string>
    <string name="emergency_questions_alone">Are you alone?</string>
    <string name="emergency_questions_sweating">Are you sweating?</string>
    <string name="emergency_questions_breath">Is your breath missing?</string>


    <string name="answer_questions_first_time">Is the first time it happens?  YES</string>
    <string name="answer_questions_chest">Do you feel chest pain or a sense of oppression?  YES</string>
    <string name="answer_questions_faint">Do you feel faint?  YES</string>
    <string name="answer_questions_medicine">Do you usually take medicine for this problem?  YES</string>
    <string name="answer_questions_alone">Are you alone?  YES</string>
    <string name="answer_questions_sweating">Are you sweating?  YES</string>
    <string name="answer_questions_breath">Is your breath missing?  YES</string>


    <string-array name="emergency_questions">
        <item>@string/emergency_questions_first_time</item>
        <item>@string/emergency_questions_chest</item>
        <item>@string/emergency_questions_faint</item>
        <item>@string/emergency_questions_medicine</item>
        <item>@string/emergency_questions_alone</item>
        <item>@string/emergency_questions_sweating</item>
        <item>@string/emergency_questions_breath</item>
    </string-array>

</resources>
